--- a/brends.html
+++ b/brends.html
@@ -165,40 +165,42 @@
         </h1>
       </div>
     </section>
-<section>
-  <div class="top-slider slider--brand">
-    <div class="owl-carousel">
-      <div class="top-slider__slide" style="background-image: url('img/BG.svg')">
-        <div class="container--default">
-          <div class="row justify-between align-center wrap">
-            <div class="col col--4of12">
-              <img src="img/sale@3x.png" alt="" class="img img--responsive">
+    <section>
+      <div class="top-slider slider--brand">
+        <div class="owl-carousel">
+          <div class="top-slider__slide" style="background-image: url('img/BG.svg')">
+            <div class="container--default">
+              <div class="row justify-between align-center wrap">
+                <div class="col col--4of12">
+                  <img src="img/sale@3x.png" alt="" class="img img--responsive">
+                </div>
+                <div class="col col--6of12">
+                  <h1 class="top-slider__title">ionto comed</h1>
+                  <div class="top-slider__subtitle">Европейский лидер по производству профессионального оборудования
+                  </div>
+                  <a href="" class="top-slider__url">Перейти на сайт <span>ionto comed</span></a>
+                </div>
+              </div>
             </div>
-            <div class="col col--6of12">
-              <h1 class="top-slider__title">ionto comed</h1>
-              <div class="top-slider__subtitle">Европейский лидер по производству профессионального оборудования</div>
-              <a href="" class="top-slider__url">Перейти на сайт <span>ionto comed</span></a>
+          </div>
+          <div class="top-slider__slide" style="background-image: url('')">
+            <div class="container--default">
+              <div class="row justify-between align-center wrap">
+                <div class="col col--4of12">
+                  <img src="img/sale@3x.png" alt="" class="img img--responsive">
+                </div>
+                <div class="col col--6of12">
+                  <h1 class="top-slider__title">Bernard Cassiere</h1>
+                  <div class="top-slider__subtitle">Европейский лидер по производству профессионального оборудования.
+                    Лидирует в производстве кресел</div>
+                  <a href="" class="top-slider__url">Перейти на сайт <span>Bernard Cassiere</span></a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="top-slider__slide" style="background-image: url('')">
-        <div class="container--default">
-          <div class="row justify-between align-center wrap">
-            <div class="col col--4of12">
-              <img src="img/sale@3x.png" alt="" class="img img--responsive">
-            </div>
-            <div class="col col--6of12">
-              <h1 class="top-slider__title">Bernard Cassiere</h1>
-              <div class="top-slider__subtitle">Европейский лидер по производству профессионального оборудования. Лидирует в производстве кресел</div>
-              <a href="" class="top-slider__url">Перейти на сайт <span>Bernard Cassiere</span></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
     <section class="brand__main-info">
       <div class="container banners__info">
         <div class="banners__img">
@@ -403,6 +405,11 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- section--social -->
+    <section class="section--social">
+      <div class="container">
         <ul class="header__social-list">
           <li class="header__social header__social--vk">
             <a href="#"></a>
