--- a/news.html
+++ b/news.html
@@ -158,36 +158,33 @@
         </ol>
       </div>
     </div>
+    <!-- banners -->
     <section class="banners courses-page">
-      <div class="container">
-        <div class="offers__item">
-          <div class="offers__photo">
-            <img src="img/courses1.jpg" srcset="img/courses1@2x.jpg 900w, img/courses1@3x.jpg 1200w" alt="">
-          </div>
-          <div class="offers__desc">
-            <div class="offers__title">
-              Требуются модели
+        <div class="container">
+          <a href="#" class="offers__item">
+            <div class="offers__photo" style="background-image: url('img/courses1@2x.jpg');"></div>
+            <div class="offers__desc">
+              <div class="offers__title">
+                Требуются модели
+              </div>
+              <div class="offers__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
+              </div>
             </div>
-            <div class="offers__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
+          </a>
+          <a href="#" class="offers__item">
+            <div class="offers__photo" style="background-image: url('img/courses2@2x.jpg');"></div>
+            <div class="offers__desc">
+              <div class="offers__title">
+                Ближайшие семинары
+              </div>
+              <div class="offers__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <div class="offers__item">
-          <div class="offers__photo">
-            <img src="img/courses2.jpg" srcset="img/courses2@2x.jpg 900w, img/courses2@3x.jpg 1200w" alt="">
-          </div>
-          <div class="offers__desc">
-            <div class="offers__title">
-              Ближайшие семинары
-            </div>
-            <div class="offers__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
     <section class="news__section">
       <div class="container">
         <div class="main-title">
