--- a/courses.html
+++ b/courses.html
@@ -162,7 +162,7 @@
     <!-- banners -->
     <section class="banners courses-page">
       <div class="container">
-        <div class="offers__item">
+        <a href="#" class="offers__item">
           <div class="offers__photo" style="background-image: url('img/courses1@2x.jpg');"></div>
           <div class="offers__desc">
             <div class="offers__title">
@@ -172,8 +172,8 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
             </div>
           </div>
-        </div>
-        <div class="offers__item">
+        </a>
+        <a href="#" class="offers__item">
           <div class="offers__photo" style="background-image: url('img/courses2@2x.jpg');"></div>
           <div class="offers__desc">
             <div class="offers__title">
@@ -183,7 +183,7 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </section>
     <!-- education features -->
