--- a/brends.html
+++ b/brends.html
@@ -158,14 +158,13 @@
         </ol>
       </div>
     </div>
-    <section class="banners">
+    <!-- top slider -->
+    <section>
       <div class="container">
         <h1 class="main-title">
           Ionto Comed - это профессиональное оборудование для косметологии и педикюра из Германии
         </h1>
       </div>
-    </section>
-    <section>
       <div class="top-slider slider--brand">
         <div class="owl-carousel">
           <div class="top-slider__slide" style="background-image: url('img/BG.svg')">
@@ -201,6 +200,7 @@
         </div>
       </div>
     </section>
+    <!-- main info -->
     <section class="brand__main-info">
       <div class="container banners__info">
         <div class="banners__img">
@@ -235,6 +235,7 @@
         </div>
       </div>
     </section>
+    <!-- offers -->
     <section class="offers">
       <div class="container">
         <div class="main-title">
@@ -310,6 +311,7 @@
         </div>
       </div>
     </section>
+    <!-- sales -->
     <section class="sales">
       <div class="container">
         <div class="main-title">
@@ -341,6 +343,7 @@
         </div>
       </div>
     </section>
+    <!-- reviews -->
     <section class="reviews">
       <div class="container">
         <div class="main-title">
