--- a/contacts.html
+++ b/contacts.html
@@ -188,7 +188,6 @@
             <img data-coords="30.347543,59.946324" data-id="2"
               src="https://static-maps.yandex.ru/1.x/?ll=30.347543,59.946324&size=450,450&z=16&l=map&pt=30.347543,59.946324,pmwtm1"
               alt="">
-
             <div class="service__addresses-city">
               Москва
             </div>
@@ -229,16 +228,10 @@
         <div class="main-title">
           Найти дилера
         </div>
-        <form action="" class="contacts__filters">
+        <div class="contacts__filters">
           <div class="contacts__input contacts__select">
             <div class="contacts__arrow"></div>
-            <select name="brend" id="" class="">
-              <option value="33.0000,35.0000;65.0000,34.0000">Все производители</option>
-              <option value="1">Ionto</option>
-              <option value="2">Suda</option>
-              <option value="3">Ionto</option>
-              <option value="4">Suda</option>
-            </select>
+            <select name="brand-city" id="brand-city" class=""></select>
           </div>
           <div class="contacts__input contacts__search">
             <input type="text" class="" placeholder="Введите город">
@@ -246,9 +239,14 @@
           <div class="contacts__input">
             <button class="mainbtn mainbtn--blue" id="dealer-btn">Стать дилером</button>
           </div>
-        </form>
-        <div class="contacts__map" id="mapDealer">
         </div>
+        <!-- map -->
+        <div id="dealers">
+          <ul id="shops"></ul>
+        </div>
+
+        <div id="map" style="width: 100%; height: 600px"></div>
+        <!-- map -->
       </div>
     </section>
     <!-- contacts form -->
@@ -270,7 +268,7 @@
           <input type="text" class="contacts__field contacts__field--half" placeholder="Ваш город">
           <input type="tel" class="contacts__field contacts__field--half contacts__field--phonemask phone-2"
             placeholder="Телефон" required>
-          <input type="text" class="contacts__field contacts__field--half" placeholder="Направление">
+          <input type="text" class="contacts__field contacts__field--half" id="form-direction" laceholder="Направление">
           <input type="email" class="contacts__field contacts__field--half" placeholder="Email" required>
           <input type="text" class="contacts__field contacts__field--half" placeholder="Бренд">
           <textarea name="" id="" cols="30" rows="3" class="contacts__field contacts__field--big"
@@ -344,7 +342,36 @@
     </div>
   </footer>
   <script src="js/main.js"></script>
-  <script src="https://api-maps.yandex.ru/2.1.74/?apikey=ac18c3d7-cdb5-4fce-a82f-ff6391ca77e5&lang=ru_RU" type="text/javascript">
+  <script src="https://api-maps.yandex.ru/2.1.74/?apikey=ac18c3d7-cdb5-4fce-a82f-ff6391ca77e5&lang=ru_RU"
+    type="text/javascript">
+  </script>
+  <script>
+    var dealers = [{
+        'cityName': 'Москва',
+        'dealers': [{
+            'coordinates': [55.72532368326033, 37.748675112058876],
+            'name': 'Рязанский проспект, 6Ас21'
+          },
+          {
+            'coordinates': [55.701677873469, 37.57358050756649],
+            'name': 'Ленинский проспект, 47с2'
+          }
+        ]
+      },
+      {
+        'cityName': 'Санкт-Петербург',
+        'dealers': [{
+            'coordinates': [59.863210042666125, 30.37903938671841],
+            'name': 'Будапештская улица, 36к2'
+          },
+          {
+            'coordinates': [59.99486277158917, 30.406505207030918],
+            'name': 'проспект Непокорённых'
+          }
+        ]
+      }
+    ];
+    contactsMap(dealers);
   </script>
 </body>
 
