complex-index added

--- a/one-course.html
+++ b/one-course.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/datepicker.minimal.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="libs/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -239,7 +240,7 @@
                   Отзывы
                 </a>
               </div>
-              <div class="course__desc course__desc--active">
+              <div class="course__desc course__desc--active mCustomScrollbar" data-mcs-theme="dark">
                 <div class="course__text">
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi. Ut placerat quam
@@ -280,7 +281,7 @@
                   </div>
                 </div>
               </div>
-              <div class="course__desc">
+              <div class="course__desc mCustomScrollbar" data-mcs-theme="dark">
                 <div class="education__areas">
                   <div class="education__area">
                     <div class="education__subject">
@@ -338,7 +339,7 @@
                   </div>
                 </div>
               </div>
-              <div class="course__desc">
+              <div class="course__desc mCustomScrollbar" data-mcs-theme="dark">
                 <ul class="feedback-list">
                   <li class="feedback">
                     <article>
