--- a/category-mebel.html
+++ b/category-mebel.html
@@ -406,28 +406,14 @@
         </h2>
       </div>
     </div>
+    <!-- changes -->
     <section class="mebel__portfolio">
       <div class="service__slider owl-carousel">
-        <div class="slider__item">
-          <img src="img/mebel-portfolio.png" srcset="img/mebel-portfolio.png 900w, img/mebel-portfolio@3x.png 1200w"
-            alt="">
-          <div class="text__container">
-            <div class="text__inner">
-              <div class="slider__text mainbtn">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum amet laborum eius commodi quae neque
-                adipisci odit. Accusantium optio odit numquam fuga error aliquam voluptatibus? Enim pariatur archite
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slider__item">
-          <img src="img/mebel-portfolio.png" srcset="img/mebel-portfolio.png 900w, img/mebel-portfolio@3x.png 1200w"
-            alt="">
-          <div class="text__container">
-            <div class="text__inner">
-              <div class="slider__text mainbtn">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum amet laborum eius commodi quae neque
-                adipisci odit. Accusantium optio odit numquam fuga error aliquam voluptatibus? Enim pariatur archite
+        <div class="slider__item" style="background-image: url('img/mebel-portfolio.png');">
+          <div class="flex-container">
+            <div class="row">
+              <div class="col col--6of12">
+                <div class="portfolio__text" title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum odio, ab eos nam sed nemo tempora nobis obcaecati iste id quae sapiente est cupiditate autem laborum necessitatibus accusantium, unde iure a. Nesciunt assumenda eaque facilis eligendi similique ea ipsam iure obcaecati accusantium praesentium, et nulla repellendus quidem vitae aliquid. Aut."></div>
               </div>
             </div>
           </div>
