--- a/sales.html
+++ b/sales.html
@@ -181,7 +181,7 @@
               </div>
               <div class="sales-page__right">
                 <div class="sales__name">
-                  Название акции
+                  Название акцииz
                 </div>
                 <div class="sales__brend">
                   Бренд
