--- a/courses.html
+++ b/courses.html
@@ -273,8 +273,7 @@
               <a href="#" class="education__title">
                 Аппаратный педикюр
               </a>
-              <div class="calendar">
-              </div>
+              <a href="#" class="calendar"></a>
             </div>
             <div class="education__content">
               <div class="education__items">
