search page modificated

--- a/search.html
+++ b/search.html
@@ -234,9 +234,7 @@
                                     </div>
                                 </div>
                                 <div class="mebel__btns">
-                                    <div class="mainbtn mainbtn--blue mebel__all">
-                                        <a href="#">Найти</a>
-                                    </div>
+                                    <input type="submit" value="Найти" class="component--button button--stretch button--big button--blue">
                                 </div>
                             </div>
                         </form>
@@ -252,7 +250,6 @@
                                         </a>
                                     </header>
                                     <p>
-                                        <a href=""><img src="img/new2.jpg" alt="" width="150px"></a>
                                         Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные
                                         тексты. Жизни они грустный безорфографичный сих заголовок своего вдали
                                         реторический первую, лучше путь алфавит, пустился образ несколько одна имеет за
@@ -267,12 +264,28 @@
                                         </a>
                                     </header>
                                     <p>
-                                        <a href=""><img src="img/new2.jpg" alt="" width="150px"></a>
                                         Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные
                                         тексты. Жизни они грустный безорфографичный сих заголовок своего вдали
                                         реторический первую, лучше путь алфавит, пустился образ несколько одна имеет за
                                         все?</p>
                                 </article>
+                            </li>
+                        </ul>
+                        <ul class="pagination">
+                            <li>
+                                <a href="">&laquo;</a>
+                            </li>
+                            <li>
+                                <a href="">1</a>
+                            </li>
+                            <li>
+                                <a href="">2</a>
+                            </li>
+                            <li>
+                                <a href="">&mldr;</a>
+                            </li>
+                            <li>
+                                <a href="">&raquo;</a>
                             </li>
                         </ul>
                     </div>
